update description of car boxes  in generl,premium,luxuryCars.html file and add script to luxuryCars.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
@@ -116,7 +116,10 @@
                                     <h5 class="card-title">Toyota Corolla Axio/ NZE141</h5>
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
-                                        Rate : Rs 120,330.00 </p>
+                                        Rate : Rs 120,330.00 <br> Free Km for
+                                        a Day : 100 km <br> Free Km for
+                                        a Day : 2400 km <br> Price per
+                                        Extra Km : Rs 49.50</p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -128,7 +131,10 @@
                                     <h5 class="card-title">Perodua Bezza Prime Sedan - Auto (2017)</h5>
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
-                                        Rate : Rs 120,330.00 </p>
+                                        Rate : Rs 120,330.00 <br> Free Km for
+                                        a Day : 100 km <br> Free Km for
+                                        a Day : 2400 km <br> Price per
+                                        Extra Km : Rs 49.50</p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -140,7 +146,10 @@
                                     <h5 class="card-title">Toyota Allion NZT 260</h5>
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
                                         Rate : 5800 <br> Monthly
-                                        Rate : Rs 155,760.00 </p>
+                                        Rate : Rs 155,760.00 <br> Free Km for
+                                        a Day : 100 km <br> Free Km for
+                                        a Day : 2400 km <br> Price per
+                                        Extra Km : Rs 60.00</p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -152,7 +161,10 @@
                                     <h5 class="card-title">Toyota Axio NKR 165</h5>
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
                                         Rate : 6000 <br> Monthly
-                                        Rate : Rs 175,230.00 </p>
+                                        Rate : Rs 175,230.00 <br> Free Km for
+                                        a Day : 100 km <br> Free Km for
+                                        a Day : 2400 km <br> Price per
+                                        Extra Km : Rs 65.00</p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -170,7 +182,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Corolla_Axio-NZE141/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Corolla Axio/ NZE141</h5>
-                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -182,7 +194,7 @@
                                 <img src="assests/images/Premium_Cars/Perodua_Bezza_Prime-Sedan-Auto/front.png" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Perodua Bezza Prime Sedan - Auto (2017)</h5>
-                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -194,7 +206,8 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Allion_NZT_260/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Allion NZT 260</h5>
-                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Five passengers can travel in this car
+                                        <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -206,7 +219,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Axio_NKR_165/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Axio NKR 165</h5>
-                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -229,7 +242,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Corolla_Axio-NZE141/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Corolla Axio/ NZE141</h5>
-                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -241,7 +254,7 @@
                                 <img src="assests/images/Premium_Cars/Perodua_Bezza_Prime-Sedan-Auto/front.png" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Perodua Bezza Prime Sedan - Auto (2017)</h5>
-                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -253,7 +266,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Allion_NZT_260/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Allion NZT 260</h5>
-                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -265,7 +278,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Axio_NKR_165/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Axio NKR 165</h5>
-                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -345,7 +358,8 @@
                                     <h5 class="card-title">Toyota Corolla Axio/ NZE141</h5>
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
-                                        Rate : Rs 120,330.00 </p>
+                                        Rate : Rs 120,330.00<br> Price per
+                                        Extra Km : Rs 49.50 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -357,7 +371,8 @@
                                     <h5 class="card-title">Perodua Bezza Prime Sedan - Auto (2017)</h5>
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
-                                        Rate : Rs 120,330.00 </p>
+                                        Rate : Rs 120,330.00<br> Price per
+                                        Extra Km : Rs 49.50 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -369,7 +384,8 @@
                                     <h5 class="card-title">Toyota Allion NZT 260</h5>
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
                                         Rate : 5800 <br> Monthly
-                                        Rate : Rs 155,760.00 </p>
+                                        Rate : Rs 155,760.00 <br> Price per
+                                        Extra Km : Rs 60.00</p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -381,7 +397,8 @@
                                     <h5 class="card-title">Toyota Axio NKR 165</h5>
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
                                         Rate : 6000 <br> Monthly
-                                        Rate : Rs 175,230.00 </p>
+                                        Rate : Rs 175,230.00<br> Price per
+                                        Extra Km : Rs 65.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
@@ -399,7 +416,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Corolla_Axio-NZE141/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Corolla Axio/ NZE141</h5>
-                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -411,7 +428,7 @@
                                 <img src="assests/images/Premium_Cars/Perodua_Bezza_Prime-Sedan-Auto/front.png" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Perodua Bezza Prime Sedan - Auto (2017)</h5>
-                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -423,7 +440,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Allion_NZT_260/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Allion NZT 260</h5>
-                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
@@ -435,7 +452,7 @@
                                 <img src="assests/images/Premium_Cars/Toyota_Axio_NKR_165/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
                                 <div class="card-body">
                                     <h5 class="card-title">Toyota Axio NKR 165</h5>
-                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
+                                    <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
                                     <a href="#" class="btn btn-dark">More Details</a>
