--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -101,7 +101,6 @@
                         </nav>
                     </nav >
                 </div>
-
             </nav>
         </div>
         <div class="col-10">
@@ -404,154 +403,6 @@
 
 <script src="assests/js/bootstrap.min.js"></script>
 <script src="assests/JQuery/jquery-3.6.1.min.js"></script>
-<script>
-
-    $("#all").css('display','block');
-    $("#NoOfPassengers").css('display','none');
-    $("#two").css('display','none');
-    $("#five").css('display','none');
-    $("#transmissionType").css('display','none');
-    $("#auto").css('display','none');
-    $("#brand").css('display','none');
-    $("#benz").css('display','none');
-    $("#bmw").css('display','none');
-    $("#toyota").css('display','none');
-    $("#price").css('display','none');
-    $("#fuel").css('display','none');
-    $("#petrol").css('display','none');
-    $("#diesel").css('display','none');
-    $("#rowNoOfPassengers").css('display','none');
-    $("#rowTransmissionType").css('display','none');
-    $("#rowBrand").css('display','none');
-    $("#rowFuelType").css('display','none');
-
-
-    $("#navAll").click(function (){
-        $("#all").css('display','block');
-        $("#NoOfPassengers").css('display','none');
-        $("#two").css('display','none');
-        $("#five").css('display','none');
-        $("#transmissionType").css('display','none');
-        $("#auto").css('display','none');
-        $("#brand").css('display','none');
-        $("#benz").css('display','none');
-        $("#bmw").css('display','none');
-        $("#toyota").css('display','none');
-        $("#price").css('display','none');
-        $("#fuel").css('display','none');
-        $("#petrol").css('display','none');
-        $("#diesel").css('display','none');
-        $("#rowNoOfPassengers").css('display','none');
-        $("#rowTransmissionType").css('display','none');
-        $("#rowBrand").css('display','none');
-        $("#rowFuelType").css('display','none');
-    });
-
-    $("#navNoOfPassengers").click(function (){
-        $("#all").css('display','none');
-        $("#NoOfPassengers").css('display','block');
-        $("#two").css('display','block');
-        $("#five").css('display','block');
-        $("#transmissionType").css('display','none');
-        $("#auto").css('display','none');
-        $("#brand").css('display','none');
-        $("#benz").css('display','none');
-        $("#bmw").css('display','none');
-        $("#toyota").css('display','none');
-        $("#price").css('display','none');
-        $("#fuel").css('display','none');
-        $("#petrol").css('display','none');
-        $("#diesel").css('display','none');
-        $("#rowNoOfPassengers").css('display','block');
-        $("#rowTransmissionType").css('display','none');
-        $("#rowBrand").css('display','none');
-        $("#rowFuelType").css('display','none');
-    });
-
-    $("#navTransmissionType").click(function (){
-        $("#all").css('display','none');
-        $("#NoOfPassengers").css('display','none');
-        $("#two").css('display','none');
-        $("#five").css('display','none');
-        $("#transmissionType").css('display','block');
-        $("#auto").css('display','block');
-        $("#brand").css('display','none');
-        $("#benz").css('display','none');
-        $("#bmw").css('display','none');
-        $("#toyota").css('display','none');
-        $("#price").css('display','none');
-        $("#fuel").css('display','none');
-        $("#petrol").css('display','none');
-        $("#diesel").css('display','none');
-        $("#rowNoOfPassengers").css('display','none');
-        $("#rowTransmissionType").css('display','block');
-        $("#rowBrand").css('display','none');
-        $("#rowFuelType").css('display','none');
-    });
-
-    $("#navBrand").click(function (){
-        $("#all").css('display','none');
-        $("#NoOfPassengers").css('display','none');
-        $("#two").css('display','none');
-        $("#five").css('display','none');
-        $("#transmissionType").css('display','none');
-        $("#auto").css('display','none');
-        $("#brand").css('display','block');
-        $("#benz").css('display','block');
-        $("#bmw").css('display','block');
-        $("#toyota").css('display','block');
-        $("#price").css('display','none');
-        $("#fuel").css('display','none');
-        $("#petrol").css('display','none');
-        $("#diesel").css('display','none');
-        $("#rowNoOfPassengers").css('display','none');
-        $("#rowTransmissionType").css('display','none');
-        $("#rowBrand").css('display','block');
-        $("#rowFuelType").css('display','none');
-    });
-
-    $("#navPrice").click(function (){
-        $("#all").css('display','none');
-        $("#NoOfPassengers").css('display','none');
-        $("#two").css('display','none');
-        $("#five").css('display','none');
-        $("#transmissionType").css('display','none');
-        $("#auto").css('display','none');
-        $("#brand").css('display','none');
-        $("#benz").css('display','none');
-        $("#bmw").css('display','none');
-        $("#toyota").css('display','none');
-        $("#price").css('display','block');
-        $("#fuel").css('display','none');
-        $("#petrol").css('display','none');
-        $("#diesel").css('display','none');
-        $("#rowNoOfPassengers").css('display','none');
-        $("#rowTransmissionType").css('display','none');
-        $("#rowBrand").css('display','none');
-        $("#rowFuelType").css('display','none');
-    });
-
-    $("#navFuel").click(function (){
-        $("#all").css('display','none');
-        $("#NoOfPassengers").css('display','none');
-        $("#two").css('display','none');
-        $("#five").css('display','none');
-        $("#transmissionType").css('display','none');
-        $("#auto").css('display','none');
-        $("#brand").css('display','none');
-        $("#benz").css('display','none');
-        $("#bmw").css('display','none');
-        $("#toyota").css('display','none');
-        $("#price").css('display','none');
-        $("#fuel").css('display','block');
-        $("#petrol").css('display','block');
-        $("#diesel").css('display','block');
-        $("#rowNoOfPassengers").css('display','none');
-        $("#rowTransmissionType").css('display','none');
-        $("#rowBrand").css('display','none');
-        $("#rowFuelType").css('display','block');
-    });
-
-</script>
+<script src="controllers/luxuryCars.js"></script>
 </body>
 </html>
