add scripts generalCars.js file and link to generalCars.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -76,25 +76,25 @@
                 <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
                     <div class="row  position-fixed ms-1" style="top: 90px">
                         <nav class="nav nav-pills flex-column" id="categories">
-                            <a class="nav-link" href="#all">All</a>
-                            <a class="nav-link" href="#NoOfPassengers">No Of Passengers</a>
-                            <nav class="nav nav-pills flex-column">
+                            <a class="nav-link" href="#all"id="navAll">All</a>
+                            <a class="nav-link" href="#NoOfPassengers"id="navNoOfPassengers">No Of Passengers</a>
+                            <nav class="nav nav-pills flex-column"id="rowNoOfPassengers">
                                 <a class="nav-link ms-3 my-1" href="#four">Four Passengers</a>
                             </nav>
-                            <a class="nav-link" href="#transmissionType">Transmission Type</a>
-                            <nav class="nav nav-pills flex-column">
+                            <a class="nav-link" href="#transmissionType"id="navTransmissionType">Transmission Type</a>
+                            <nav class="nav nav-pills flex-column"id="rowTransmissionType">
                                 <a class="nav-link ms-3 my-1" href="#manual">Manual</a>
                                 <a class="nav-link ms-3 my-1" href="#auto">Auto</a>
                             </nav>
-                            <a class="nav-link" href="#brand">Brand</a>
-                            <nav class="nav nav-pills flex-column">
+                            <a class="nav-link" href="#brand"id="navBrand">Brand</a>
+                            <nav class="nav nav-pills flex-column"id="rowBrand">
                                 <a class="nav-link ms-3 my-1" href="#suzuki">Suzuki</a>
                                 <a class="nav-link ms-3 my-1" href="#perodua">Perodua</a>
                                 <a class="nav-link ms-3 my-1" href="#toyota">Toyota</a>
                             </nav>
-                            <a class="nav-link" href="#price">Price</a>
-                            <a class="nav-link" href="#fuel">Fuel type</a>
-                            <nav class="nav nav-pills flex-column">
+                            <a class="nav-link" href="#price"id="navPrice">Price</a>
+                            <a class="nav-link" href="#fuel"id="navFuel">Fuel type</a>
+                            <nav class="nav nav-pills flex-column"id="rowFuelType">
                                 <a class="nav-link ms-3 my-1" href="#petrol">Petrol</a>
                                 <a class="nav-link ms-3 my-1" href="#diesel">Diesel</a>
                             </nav>
